Consolidated lobby to dashboard view, restyling

--- a/public/index.html
+++ b/public/index.html
@@ -28,12 +28,10 @@
       href="css/bootstrap.min.css"
     />
 
-    <link
-      rel="stylesheet"
-      href="css/auth0-theme.min.css"
-    />
+    <link rel="stylesheet" href="https://unpkg.com/@tabler/core@latest/dist/css/tabler.min.css">
+    <script src="https://unpkg.com/@tabler/core@latest/dist/js/tabler.min.js"></script>
 
-    <title>Login</title>
+    <title>bellga.me</title>
   </head>
   <body class="h-100">
     <noscript>You need to enable JavaScript to run this app.</noscript>
